--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "socket.io": "^3.1.0"
+    "socket.io": "^3.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
